--- a/libft/Makefile
+++ b/libft/Makefile
@@ -30,9 +30,9 @@ SRCS	= ft_atoi.c \
 		ft_putchar_fd.c \
 		ft_putendl_fd.c \
 		ft_putnbr_base.c \
-		ft_putnbr_dbl.c \
 		ft_putnbr_fd.c \
 		ft_putnbr_uint.c \
+		ft_putptr.c \
 		ft_putstr.c \
 		ft_putstr_fd.c \
 		ft_split.c \
